Described the connections and renamed Id

--- a/FileProcessing.API/appsettings.json
+++ b/FileProcessing.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "connection": "Server=DESKTOP-0SG1T74;Database=FileProcessingDB;Trusted_Connection=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
