--- a/FileProcessing.API/FileProcessing.API.csproj
+++ b/FileProcessing.API/FileProcessing.API.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FileProcessingDB\FileProcessingDB.csproj" />
+  </ItemGroup>
+
 
 </Project>
