--- a/FileProcessing.API/FileProcessing.API.csproj
+++ b/FileProcessing.API/FileProcessing.API.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FileProcessingApplication\FileProcessingApplication.csproj" />
     <ProjectReference Include="..\FileProcessingDB\FileProcessingDB.csproj" />
   </ItemGroup>
 
